--- a/.github/workflows/geonews_cron.yml
+++ b/.github/workflows/geonews_cron.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Run GeoNews Flow
         env:
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_PASS: ${{ secrets.GMAIL_PASS }}
