--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "crewai[google-genai,tools]==1.7.2",
     "fastmcp>=2.12.5",
+    "psycopg[binary]"
 ]
 
 [project.scripts]
