added the database keys in git workflow file

--- a/.github/workflows/geonews_cron.yml
+++ b/.github/workflows/geonews_cron.yml
@@ -28,4 +28,9 @@ jobs:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_PASS: ${{ secrets.GMAIL_PASS }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_PORT: ${{ secrets.DB_PORT }}
         run: uv run kickoff
